Alignment Fixed

--- a/home.css
+++ b/home.css
@@ -113,17 +113,7 @@ p:hover{
 	font-family:;
 }
 
-img{
-	margin-left: 40px;
-	
-	
-}
 
-#images-box{
-	display: flex;
-	margin-top: 40px;
-	gap: 30px;
-}
 
 #line-last{
 margin-top: 20px;
@@ -136,3 +126,43 @@ position:absolute;
 	box-shadow: 0,0,0,0 rgba(0,0,0,0.26);
 }
 
+#face: hover{
+	background-color: green;
+
+}
+
+#abc{
+	visibility: none;
+	display: none;
+}
+
+#abc:hover{
+	display: block;
+}
+
+
+#banner{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	
+}
+
+
+#images-box{
+	display: flex;
+	height: 300px;
+	width: 100%;
+	margin-left: 2.25%;
+	margin-right: auto;
+	gap: 20px;
+	margin-top: 40px;
+	
+}
+
+#images-box img{
+	display:flex;
+	
+
+
+}
